test_regress/t/t_property_sexpr_unsup.out
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:32:41: Implication with sequence expression
   32 |   assert property (@(posedge clk) ##1 1 |-> 1) $display("[%0t] single delay with const implication stmt, fileline:%d", $time, 32);
      |                                         ^~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:34:41: Implication with sequence expression
   34 |   assert property (@(posedge clk) ##1 1 |-> not (val)) $display("[%0t] single delay implication with negated var stmt, fileline:%d", $time, 34);
      |                                         ^~~
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:36:37: Implication with sequence expression
   36 |   assert property (@(posedge clk) 1 |-> ##1 val) $display("[%0t] single delay implication with negated var stmt, fileline:%d", $time, 36);
      |                                     ^~~
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:38:45: Implication with sequence expression
   38 |   assert property (@(posedge clk) (##1 val) |-> (not val)) $display("[%0t] single delay with negated implication stmt, fileline:%d", $time, 38);
      |                                             ^~~
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:40:45: Implication with sequence expression
   40 |   assert property (@(posedge clk) ##1 (val) |-> not (val)) $display("[%0t] single delay with negated implication brackets stmt, fileline:%d", $time, 40);
      |                                             ^~~
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:44:41: Implication with sequence expression
   44 |   assert property (@(posedge clk) ##1 1 |-> 0) $display("[%0t] disable iff with cond implication stmt, fileline:%d", $time, 44);
      |                                         ^~~
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:46:45: Implication with sequence expression
   46 |   assert property (@(posedge clk) (##1 val) |-> (##1 val)) $display("[%0t] two delays implication stmt, fileline:%d", $time, 46);
      |                                             ^~~
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:48:52: Disable iff with sequence expression
                                                    : ... note: In instance 't'
   48 |   assert property (@(posedge clk) disable iff (cyc != 5) ##1 0) $display("[%0t] disable iff stmt, fileline:%d", $time, 48);
      |                                                    ^~
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:50:52: Disable iff with sequence expression
                                                    : ... note: In instance 't'
   50 |   assume property (@(posedge clk) disable iff (cyc != 5) ##1 0) $display("[%0t] disable iff stmt, fileline:%d", $time, 50);
      |                                                    ^~
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:52:51: Disable iff with sequence expression
                                                    : ... note: In instance 't'
   52 |   cover property (@(posedge clk) disable iff (cyc != 5) ##1 0) $display("[%0t] disable iff stmt, fileline:%d", $time, 52);
      |                                                   ^~
%Error: Exiting due to
